--- a/music-player/music.css
+++ b/music-player/music.css
@@ -3,4 +3,15 @@ body {
     background-position: center; /* Centra l'immagine nel background */
     background-repeat: no-repeat; /* Evita che l'immagine di sfondo si ripeta */
 }
+#backgroundImage {
+    position: fixed; /* Per mantenere l'immagine di sfondo fissata nella posizione */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Posiziona l'elemento dietro agli altri contenuti */
+    filter: blur(10px); /* Applica l'effetto di sfocatura */
+    background-size: cover; /* Copri l'intero contenitore con l'immagine */
+    background-position: center; /* Centra l'immagine */
+}
 
