Modificata la homepage css, con saluto dell'utente che ha fatto l'accesso e la preview della prima nota

--- a/Selfie/src/Homepage/Homepage.css
+++ b/Selfie/src/Homepage/Homepage.css
@@ -48,6 +48,9 @@ body {
     text-align: center;
     color: #333;
     flex-grow: 1;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    margin: 15px;
   }
   
   
