--- a/Selfie/src/Homepage/Homepage.css
+++ b/Selfie/src/Homepage/Homepage.css
@@ -19,8 +19,9 @@ body {
     width: 100%;
     height: 20%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 10px;
   }
   
   .card-container {
