--- a/Selfie/src/Homepage/Homepage.css
+++ b/Selfie/src/Homepage/Homepage.css
@@ -19,11 +19,18 @@ body {
     width: 100%;
     height: 20%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 10px;
   }
   
+  .nav-bar{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px;
+    font-size:x-large;
+  }
   .card-container {
     display: flex;
     justify-content: center;
@@ -54,6 +61,7 @@ body {
     margin: 15px;
   }
   
+
   
   .homecard:hover {
     transform: translateY(-5px);
