--- a/Selfie/src/Messages/MessageList.css
+++ b/Selfie/src/Messages/MessageList.css
@@ -1,91 +1,122 @@
+.message-list-container {
+  position: fixed;
+  bottom: 0;
+  right: -100%; /* Inizialmente fuori dallo schermo */
+  width: 30%;
+  height: 60%;
+  transition: right 0.5s ease; /* Transizione per far entrare il contenitore */
+  z-index: 1000;
+}
+
+.message-list-container.open {
+  right: 0; /* Mostra il contenitore all'interno della finestra */
+}
+
 .message-list {
-    position: fixed;
-    top: 50%; /* Centra verticalmente */
-    left: 50%; /* Centra orizzontalmente */
-    transform: translate(-50%, -50%); /* Sposta la finestra per centrarla esattamente */
-    width: 300px;
-    height: 600px;
-    max-height: 400px;
-    overflow-y: auto;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    z-index: 1000; /* Assicura che sia sopra gli altri elementi */
-  }
-  
-  /* Stile per il pulsante di chiusura */
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
-    color: #007bff; /* Colore della X */
-  }
-  
-  .tab-headers {
-    display: flex;
-    cursor: pointer;
-    margin-bottom: 20px;
-  }
-  
-  .tab-headers h3 {
-    flex: 1;
-    padding: 10px;
-    text-align: center;
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    margin: 0;
-  }
-  
-  .tab-headers h3.active {
-    background-color: #007bff;
-    color: white;
-    font-weight: bold;
-    border-bottom: 1px solid transparent; /* per far sembrare che sia sopra */
-  }
-  
-  .message-send,
-  .message-received {
-    border: 1px solid #ccc;
-    padding: 10px;
-    background-color: #fff;
-    border-radius: 5px;
-  }
-  
-
-/* Input e textarea */
-input[type="text"], textarea {
-    width: 100%; /* Larghezza al 100% */
-    padding: 10px; /* Spazio interno */
-    border: 1px solid #dcdcdc; /* Bordo chiaro */
-    border-radius: 5px; /* Angoli arrotondati */
-    margin-bottom: 10px; /* Spazio sotto gli input */
-    transition: border-color 0.3s; /* Transizione fluida per il colore del bordo */
+  width: 100%;
+  height: 100%; 
+  font-size: large ;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Focus sugli input e textarea */
-input[type="text"]:focus, textarea:focus {
-    border-color: #007bff; /* Colore del bordo blu al focus */
-    outline: none; /* Rimuove l'outline predefinito */
+/* Stile per il bottone della chat */
+.chat-button {
+  position: fixed; /* Cambia la posizione da absolute a fixed */
+  bottom: 20px; /* Fissa il bottone al bordo inferiore della finestra */
+  right: 0; /* Fissa il bottone al bordo destro della finestra */
+  background: white;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  color: #007bff;
+  border-radius: 5px;
+  padding: 10px;
+  transition: right 0.5s ease; /* Transizione per lo spostamento insieme alla chat */
 }
 
-/* Pulsante di invio */
-button[type="submit"] {
-    background-color: #007bff; /* Colore blu del pulsante */
-    color: white; /* Testo bianco */
-    border: none; /* Rimuove il bordo */
-    padding: 10px 15px; /* Spazio interno */
-    border-radius: 5px; /* Angoli arrotondati */
-    cursor: pointer; /* Cambia il cursore al passaggio del mouse */
-    transition: background-color 0.3s; /* Transizione per il colore di sfondo */
+.message-list-container.open .chat-button {
+  right: calc(30%); /* Sposta il bottone quando la chat è aperta */
 }
 
-/* Effetto hover per il pulsante di invio */
-button[type="submit"]:hover {
-    background-color: #0056b3; /* Colore blu scuro al passaggio del mouse */
+
+.tab-headers {
+  display: flex;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.tab-headers h3 {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  margin: 0;
+}
+
+.tab-headers h3.active {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+  border-bottom: 1px solid transparent;
+}
+
+.message-received {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  overflow-y: auto;
+  height: 80%;
+  padding: 15px;
+}
+
+.message-received ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.message-received li {
+  
+  list-style-type: none;
+  border: 1px solid #ccc;
+  padding: 10px;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-bottom: 2px;
+}
+
+.message-list input[type="text"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  transition: border-color 0.3s;
+}
+
+.message-list input[type="text"]:focus,
+textarea:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.message-list button[type="submit"] {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.message-list button[type="submit"]:hover {
+  background-color: #0056b3;
 }
