--- a/Selfie/src/Messages/MessageList.css
+++ b/Selfie/src/Messages/MessageList.css
@@ -46,6 +46,7 @@
   display: flex;
   cursor: pointer;
   margin-bottom: 20px;
+  justify-content: space-between;
 }
 
 .tab-headers h3 {
@@ -55,6 +56,7 @@
   background-color: #f1f1f1;
   border: 1px solid #ccc;
   margin: 0;
+  font-weight: bold;
 }
 
 .tab-headers h3.active {
@@ -62,12 +64,13 @@
   color: white;
   font-weight: bold;
   border-bottom: 1px solid transparent;
+  white-space: normal;
+  word-break: break-word;
 }
 
 .message-received {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin: 0;
   overflow-y: auto;
   height: 80%;
