--- a/Selfie/src/Pomodoro/tomatostyle.css
+++ b/Selfie/src/Pomodoro/tomatostyle.css
@@ -13,10 +13,8 @@
 }
 
 #pomodoro {
-    font-family: 'Candy', sans-serif;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    font-family: 'Candy', sans-serif;
     height: 100vh;
     flex-direction: column;
     z-index: 2;
@@ -31,16 +29,14 @@
 
   #pomodoro h1{
     margin: 0;
-    font-weight: 100;
-    font-size: 14vmin;
-    color:#fbeee0; ;
+    font-weight: 150;
+    font-size: 16vmin;
+    color:#fbeee0; 
     text-shadow: 1px 1px 2px  #422800;
     -webkit-text-stroke-color:  #422800;
-    -webkit-text-stroke-width: 3px;
-    position: absolute;
-    left:50%;
-    transform: translate(-50%);
-    top:0%;
+    -webkit-text-stroke-width: 3px; 
+    align-self: center;
+    text-align: center;
     z-index: 1000;
   }
 
@@ -94,8 +90,7 @@
       #pomodoro .startbutton {
       position: absolute;
       color: white;
-      font-size: 3vmin;
-      padding: 1vmin;
+      font-size: 5vmin;
       top: 50%;
       justify-content: flex-end;
       right: 15%;
@@ -111,7 +106,7 @@
       cursor: pointer;
       display: inline-block;
       font-weight: 600;
-      font-size: 18px;
+      font-size: 5vim;
       padding: 0 18px;
       line-height: 50px;
       text-align: center;
@@ -130,8 +125,9 @@
       transform: translate(2px, 2px);
     }
     
-    #pomodoro #clock {
+    #pomodoro #clock {  
       display: flex;
+      
       justify-content: center;
       align-items: center;
       flex-direction: column;
@@ -178,7 +174,7 @@
   -webkit-text-stroke-color:  #422800;
   -webkit-text-stroke-width: 1px;
   color: #fbeee0;
-  font-size: 3.5vmin;
+  font-size: 4vmin;
   align-items: center;
   justify-content: center;
 }
