--- a/Selfie/src/Messages/MessageList.css
+++ b/Selfie/src/Messages/MessageList.css
@@ -28,7 +28,7 @@
   bottom: 20px; /* Fissa il bottone al bordo inferiore della finestra */
   right: 0; /* Fissa il bottone al bordo destro della finestra */
   background: white;
-  border: none;
+  border: 3px solid #007bff;
   font-size: 20px;
   cursor: pointer;
   color: #007bff;
